# ChangeLog for kde-base/kcminit
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kcminit/ChangeLog,v 1.51 2007/01/20 00:32:05 carlo Exp $

  20 Jan 2007; Carsten Lohrke <carlo@gentoo.org> kcminit-3.5.6.ebuild:
  Correct MAXKDEVER.

*kcminit-3.5.6 (16 Jan 2007)

  16 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> +kcminit-3.5.6.ebuild:
  Bump to 3.5.6 (prerelease).

  11 Dec 2006; <kloeri@gentoo.org> kcminit-3.5.3.ebuild:
  Stable on ia64.

  06 Dec 2006; <kloeri@gentoo.org> kcminit-3.5.3.ebuild:
  Stable on Alpha.

  01 Dec 2006; Diego Pettenò <flameeyes@gentoo.org> kcminit-3.5.0.ebuild,
  kcminit-3.5.3.ebuild:
  Make support for hidden visibility explicit.

  26 Nov 2006; Markus Rothe <corsair@gentoo.org> kcminit-3.5.3.ebuild:
  Stable on ppc64

  16 Nov 2006; Joseph Jezak <josejx@gentoo.org> kcminit-3.5.3.ebuild:
  Marked ppc stable for bug #147570.

  14 Nov 2006; Gustavo Zacarias <gustavoz@gentoo.org> kcminit-3.5.3.ebuild:
  Stable on sparc wrt #147570

  13 Nov 2006; Danny van Dyk <kugelfang@gentoo.org> kcminit-3.5.3.ebuild:
  Marked stable on amd64 wrt bug #147570.

  13 Nov 2006; Christian Faulhammer <opfer@gentoo.org> kcminit-3.5.3.ebuild:
  "Stable x86, bug #147570"

  03 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> kcminit-3.5.3.ebuild:
  Bump to 3.5.5 (pre-release).

  17 Sep 2006; Carsten Lohrke <carlo@gentoo.org> -kcminit-3.4.1.ebuild:
  Drop KDE 3.4.

  03 Sep 2006; Bryan Østergaard <kloeri@gentoo.org> kcminit-3.5.0.ebuild:
  Stable on ia64.

  25 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> kcminit-3.5.3.ebuild:
  Bump to 3.5.4 (pre-release).

*kcminit-3.5.3 (01 Jun 2006)

  01 Jun 2006; Diego Pettenò <flameeyes@gentoo.org> +kcminit-3.5.3.ebuild:
  Update to new release.

  01 Jun 2006; Thomas Cort <tcort@gentoo.org> kcminit-3.5.0.ebuild:
  Stable on alpha wrt Bug #132213.

  29 May 2006; Jason Wever <weeve@gentoo.org> kcminit-3.5.0.ebuild:
  Stable on SPARC wrt bug #132213.
