@@ -1,3 +1,0 @@
-MD5 b86622c029ee8ab656a67c6467fff887 kdebase-3.5.0.tar.bz2 23233185
-RMD160 5f8d5735a468f1c4e42cccfc0f006e63e3c3c762 kdebase-3.5.0.tar.bz2 23233185
-SHA256 383aa9e02e375b959cf0885e48b38dd7e6c7a5adafb316f37cff1cca99360f63 kdebase-3.5.0.tar.bz2 23233185
