@@ -1,14 +1,0 @@
-# Copyright 1999-2006 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kcminit/kcminit-3.5.0.ebuild,v 1.16 2006/12/01 20:13:36 flameeyes Exp $
-
-KMNAME=kdebase
-MAXKDEVER=3.5.2
-KM_DEPRANGE="$PV $MAXKDEVER"
-inherit kde-meta eutils
-
-DESCRIPTION="KCMInit - runs startups initialization for Control Modules."
-KEYWORDS="alpha amd64 ia64 ppc ppc64 sparc x86 ~x86-fbsd"
-IUSE="kdehiddenvisibility"
-
-
